hphp/hack/test/typecheck/tparam_trailing_comma1.php.exp
File "tparam_trailing_comma1.php", line 3, characters 26-26:
Expected type (Parsing[1002])
