hphp/hack/test/typecheck/tparam_trailing_comma1.php
<?hh

function g(): Vector<int,> {
  return Vector {};
}
